--- a/webusb.manifest.json
+++ b/webusb.manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "★ PS4 SERVER",
-  "version": "★ v4+  ",
+  "version": "★ v4+Psfree  ",
   "home_assistant_domain": "esphome",
   "builds": [
     {
